<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_ok">Ok</string>
    <string name="common_cancel">Cancel</string>
    <string name="app_name">MemoRazor</string>
    <string name="words_list">Words</string>
    <string name="wordGroups_open">Open</string>
    <string name="wordGroups_rename">Rename</string>
    <string name="wordGroups_delete">Delete</string>
    <string name="wordGroups_performAction">Select action:</string>
    <string name="wordGroups_addWordGroup">Add group</string>
    <string name="wordGroups_addWordGroupInputName">Type the name of the group to add:</string>
    <string name="wordGroups_confirmDelete">Delete group %s with all words?</string>
    <string name="wordGroups_newName">Type the new name of the group.</string>
    <string name="wordGroups_wordGroups">Word groups</string>
    <string name="wordGroups_selectWordGroups">Select groups</string>
    <string name="words_performAction">Select action:</string>
    <string name="words_translate">Translate</string>
    <string name="words_delete">Delete</string>
    <string name="words_confirmDelete">Delete word?</string>
    <string name="words_addWord">Type the word. The translation will be automatically loaded.</string>
    <string name="words_noNetwork">Network connectivity failure.</string>
    <string name="words_openYandex">Open in Yandex.Dictionaries</string>
    <string name="words_openGoogleTranslate">Open in Google Translate</string>
    <string name="words_openMultitran">Open in Multitran</string>
    <string name="words_openDictionary">Open in Dict.Reference</string>
    <string name="words_noTranslation">(no translation)</string>
    <string name="words_editTranslation">Edit translation</string>
    <string name="main_actionWords">Words and groups</string>
    <string name="main_actionQuiz">Quiz</string>
    <string name="main_actionStatistics">Statistics</string>
    <string name="main_actionAbout">About</string>
    <string name="main_actionExportImport">Export</string>
    <string name="quiz_header">Quiz</string>
    <string name="quiz_skip">Skip</string>
    <string name="quiz_accept">Accept</string>
    <string name="quiz_next">Next word</string>
    <string name="quiz_word_number" formatted="false">Word %s of %s</string>
    <string name="quiz_result_yourresult_text">your result</string>
    <string name="quiz_result_score_text" formatted="false">%s of %s</string>
    <string name="quiz_result_skipped_text" formatted="false">Skipped: %s</string>
    <string name="quiz_result_elapsed_text" formatted="false">Time: %.2f sec.</string>
    <string name="quiz_results_finish_text">Finish</string>
    <string name="cards_hint_text">* tap the card to see translation</string>
    <string name="cards_prev_text">Previous</string>
    <string name="cards_next_text">Next</string>
    <string name="cards_cardNumber" formatted="false">%s of %s</string>
    <string name="cards_header">Cards</string>
    <string name="main_actionCards">Cards</string>
    <string name="quiz_hint">* enter original word</string>
    <string name="translation_expected">(fetching translation)</string>
    <string name="playback_expected">(fetching playback)</string>
    <string name="no_translation">(no translation)</string>
    <string name="word_group_language">Language</string>
    <string name="add_wordgroup_withlang">Add (other language)</string>
    <string name="select_atleast_one_group">Select at least one group</string>
    <string name="no_words_selected">Selected groups contain no words or all the words have no translation</string>
    <string name="ie_import">Import</string>
    <string name="ie_export">Export to /sdcard</string>
    <string name="ie_export_and_share">Export and Share</string>

    <string name="lang_en">English</string>
    <string name="lang_es">Spanish</string>
    <string name="lang_de">German</string>
    <string name="lang_ru">Russian</string>
    <string name="lang_it">Italian</string>
    <string name="lang_pl">Polish</string>
    <string name="lang_fr">French</string>
    <string name="lang_nl">Dutch</string>

    <string name="exportFailed">Export failed.</string>
    <string name="exportSuccessful">Export to /sdcard successful: %s</string>
    <string name="send_to">Send to</string>
    <string name="importSucceeded">Import was successful.</string>
    <string name="importFailed">Import failed.</string>
    <string name="license">This program is open source (LGPL v3).</string>
    <string name="projectPage">Project page: \r\n%s</string>

    <string name="developedBy">Developed by Oleg Yegorov</string>
    <string name="myemail">E-mail: yegorov.oleg@gmail.com</string>
    <string name="about">About MemoRazor</string>
    <string name="exportFileName">Export file name:</string>
    <string name="add_wordgroup_english">Add group (English)</string>
    <string name="add_wordgroup_spanish">Add group (Spanish)</string>
    <string name="add_wordgroup_german">Add group (German)</string>
    <string name="add_wordgroup_french">Add group (French)</string>
    <string name="add_wordgroup_italian">Add group (Italian)</string>
    <string name="add_wordgroup_polish">Add group (Polish)</string>
    <string name="add_wordgroup_russian">Add group (Russian)</string>
    <string name="add_wordgroup_dutch">Add group (Dutch)</string>
    <string name="preferences">Preferences</string>
    <string name="first_language">Your first language</string>
    <string name="first_language_summary">All added words will be translated into this language</string>
    <string name="language_to_study">Language to study</string>
    <string name="language_to_study_summary">Choose the main language that you want to study</string>
    <string name="enable_other_languages">Enable other languages</string>
    <string name="enable_other_languages_summary">Allows you to create groups containing words of other languages
    </string>
    <string name="simplified_quiz">Simplified quiz</string>
    <string name="simplified_quiz_summary">Simplified version of quiz where you will need to arrange letters in a correct
        order instead of typing the word
    </string>
    <string name="num_quiz_questions">Number of quiz questions</string>
    <string name="num_quiz_questions_summary">Maximum number of questions that will be randomly selected from target
        groups for the quiz
    </string>
    <string name="num_cards">Max number of cards</string>
    <string name="num_cards_summary">Maximum number of cards randomly selected from target groups</string>
    <string name="settingsTip">Before starting to use the application, select your first language and
        the language that you wish to study.
    </string>
    <string name="yandexcred">The application uses Yandex.Translate web services.</string>
    <string name="no_network_available">Cannot add word when no network is available</string>
    <string name="click_plus_to_add_group">Click the + button to add your first word group</string>
    <string name="click_plus_to_add_word">Click the + button to add your first word to this group</string>
    <string name="no_word_groups">There are no word groups</string>
    <string name="suppress_tips">Don\'t show tips in the future</string>
    <string name="mainMenuTip">Start with going to \'Words and groups\' menu to create groups and add words of interest
        to them.
    </string>
    <string name="wordGroupsTip">Here you can create word groups. With every group, a specific language is associated.
        You will be able to add words in this language to your group.
        Long tap a group for more options.
    </string>
    <string name="wordsTip">Now that you are inside a group, try adding new words to it. Click the + button and enter
        your word in a foreign language that you study. It will be automatically translated.
        To hear the word\'s pronunciation, click it.
        Long tap a word for more options.
    </string>
    <string name="quizTip">In the quiz, you will see the translation of words randomly picked from the groups you
        selected. Type the original word or click Skip if you don\'t remember it.
    </string>
    <string name="exportTip">You can export words and settings from this screen. Later, you will be able to import them
        by opening your *.mrz file and choosing MemoRazor as a target.
    </string>
    <string name="cardsTip">You can navigate through the cards and click them to see the original word or translation.
    </string>
    <string name="simpleQuizTip">In the quiz, you will see the translation of words randomly picked from the groups you
        selected. Arrange the letters in the word in a correct order or click Skip if you don\'t remember it.
    </string>
    <string name="groupSelectionTip">Select groups of interest. Words will be randomly drawn from them. Those words that
        don\'t have translation will be ignored.
    </string>
    <string name="initializing">Initializing...</string>
    <string name="bulk_translation_progress" formatted="false">Translating [%s]</string>
    <string name="bulk_playback_fetch_progress" formatted="false">Fetching playback for [%s]</string>
    <string name="finished">Finished.</string>
    <string name="wordGroups_bulkTranslate">Translate all words</string>
    <string name="bulk_updating" formatted="false">Updating words in %s...</string>
    <string name="bulk_checking_word" formatted="false">Checking word [%s]</string>
    <string name="error_occurred">An error has occurred.</string>
    <string name="language_settings">Language settings</string>
    <string name="quiz_cards_settings">Quiz and cards settings</string>
</resources>
