<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:padding="10dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_word_number"
            android:id="@+id/quizWordNumber" android:layout_gravity="center" android:textColor="#777777"
            android:textSize="20sp"/>
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Значение раз; значение два; значение три"
            android:id="@+id/quizTranslation" android:layout_gravity="center" android:textIsSelectable="false"
            android:textSize="20sp"
            android:background="#CCCCCC" android:singleLine="false" android:minHeight="100dp"
            android:textAlignment="center" android:gravity="center_vertical|center_horizontal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/quizHint" android:layout_gravity="center_horizontal" android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" android:textSize="20sp" android:textColor="#ff0000"
            android:textStyle="bold" android:visibility="invisible"/>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/quizAnswer" android:layout_gravity="center"
            android:focusable="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_hint"
            android:id="@+id/cards_hint"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" android:layout_gravity="center"
            android:layout_marginTop="20dp">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_accept"
                android:id="@+id/quizNext" android:minWidth="110dp" android:enabled="false"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_skip"
                android:id="@+id/quizSkip" android:minWidth="110dp"/>
    </LinearLayout>
</LinearLayout>