<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent" android:padding="10dp">


        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal"
                      android:gravity="center">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/quizLang" android:layout_gravity="center"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quiz_word_number"
                    android:id="@+id/quizWordNumber" android:layout_gravity="center"
                    android:textSize="26sp" android:layout_marginLeft="5dp"/>
        </LinearLayout>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Значение раз; значение два; значение три"
                android:id="@+id/quizTranslation" android:layout_gravity="center" android:textIsSelectable="false"
                android:textSize="20sp"
                android:background="#CCCCCC" android:singleLine="false" android:minHeight="100dp"
                android:textAlignment="center" android:gravity="center_vertical|center_horizontal"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/quizHint" android:layout_gravity="center_horizontal" android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" android:textSize="20sp" android:textStyle="bold"/>
        <fragment android:layout_width="fill_parent" android:layout_height="wrap_content" android:name="com.ell.MemoRazor.LetterShuffleFragment"
                  android:id="@+id/quizShuffledWord" />

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" android:layout_gravity="center"
                android:layout_marginTop="20dp">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quiz_next"
                    android:id="@+id/quizNext" android:minWidth="110dp" android:visibility="gone"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quiz_skip"
                    android:id="@+id/quizSkip" android:minWidth="110dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>